Push to newfeature

--- a/DevQuote.API/appsettings.json
+++ b/DevQuote.API/appsettings.json
@@ -8,6 +8,17 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=AKIRAGOTHICK\\SQLEXPRESS;Database=DonationDB;User Id=sa;Password=123456;MultipleActiveResultSets=True;"
+    "DevConnection": "Server=AKIRAGOTHICK\\SQLEXPRESS;Database=DevQuote;User Id=sa;Password=123456;MultipleActiveResultSets=True;"
+  },
+  "Cors": {
+    "OriginRequest": "https://akiragothick.com,https://grindelwald.com,https://codideep.com"
+  },
+  "Jwt": {
+    "User": "AkiraGothick",
+    "Password": "ProyectoXAkiraGothick",
+    "Key": "@GGi#T0kken$4483//3",
+    "Issuer": "DevQuote.API.AkiraGothick",
+    "Audience": "DevQuote.API.AkiraGothick",
+    "AccessTokenDurationInMinutes": 1
   }
 }
