--- a/DevQuote.API/appsettings.json
+++ b/DevQuote.API/appsettings.json
@@ -11,7 +11,7 @@
     "DevConnection": "Server={server};Database={database};User Id={user};Password={password};MultipleActiveResultSets=True;"
   },
   "Cors": {
-    "OriginRequest": "https://akiragothick.com,https://grindelwald.com,https://codideep.com"
+    "OriginRequest": "https://akiragothick.com,https://grindelwald.com"
   },
   "Jwt": {
     "User": "AkiraGothick",
