--- a/DevQuote.API/appsettings.json
+++ b/DevQuote.API/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=AKIRAGOTHICK\\SQLEXPRESS;Database=DevQuote;User Id=sa;Password=123456;MultipleActiveResultSets=True;"
+    "DevConnection": "Server={server};Database={database};User Id={user};Password={password};MultipleActiveResultSets=True;"
   },
   "Cors": {
     "OriginRequest": "https://akiragothick.com,https://grindelwald.com"
